WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274183
[iOS] -_dragInteraction:prepareForSession:completion: doesn't call the completion block when selecting live text
https://bugs.webkit.org/show_bug.cgi?id=274183
Summary
[iOS] -_dragInteraction:prepareForSession:completion: doesn't call the comple...
Wenson Hsieh
Reported
2024-05-14 14:26:47 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-05-14 14:31:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28565
EWS
Comment 2
2024-05-14 22:04:59 PDT
Committed
278796@main
(5384ee4f03d2): <
https://commits.webkit.org/278796@main
> Reviewed commits have been landed. Closing PR #28565 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-14 22:05:15 PDT
<
rdar://problem/128108333
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug