[iOS] -_dragInteraction:prepareForSession:completion: doesn't call the completion block when selecting live text https://bugs.webkit.org/show_bug.cgi?id=274183

Reviewed by Abrar Protyasha.

Make sure that this completion block is invoked when long pressing on Live Text in an image; this
doesn't cause issues in practice since `UIDragInteraction` / `BEDragInteraction` internally invokes
the underlying completion handler anyways after a short timeout (500 ms), but it's still not great
that we leave the callback dangling for that long.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _dragInteraction:prepareForSession:completion:]):

Canonical link: https://commits.webkit.org/278796@main